[css] fix#2 for B154 - text wrap for nav links

--- a/public/sximo/css/sximo-dark-blue.css
+++ b/public/sximo/css/sximo-dark-blue.css
@@ -2431,7 +2431,7 @@ li.L9 {
     top:3px;
 }
 
-#sidemenu.nav > li > a i {
+#sidemenu.nav .nav > li > a i {
   margin-right: 0;
 }
 #sidemenu.nav .nav li > a {
