--- a/public/sximo/css/sximo-light-blue.css
+++ b/public/sximo/css/sximo-light-blue.css
@@ -2501,7 +2501,7 @@ table#itemTable input[type="text"]{
     top:3px;
 }
 
-#sidemenu.nav > li > a i {
+#sidemenu.nav .nav > li > a i {
   margin-right: 0;
 }
 #sidemenu.nav .nav li > a {
